--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 @theme {
   --font-poppins: 'Poppins', sans-serif;
+  --color-active-link: #034fa7;
 }
 
 html,
@@ -16,5 +17,17 @@ body {
 @layer components {
   main {
     @apply w-full overflow-x-hidden;
+  }
+
+  nav {
+    @apply fixed z-50 w-full;
+
+    div {
+      @apply container mx-auto flex flex-col items-center gap-5 px-5 py-5 md:flex-row md:justify-between lg:px-0;
+
+      ul {
+        @apply hidden items-center gap-6 md:flex;
+      }
+    }
   }
 }
