--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,21 @@
 
 @theme {
   --font-poppins: 'Poppins', sans-serif;
-  --color-active-link: #034fa7;
-  --color-btn-primary: #694ef2;
-  --color-hover: #492dd4;
+
+  /* primary colors */
+  --color-accent-pink: #ffb7c5;
+  --color-main-indigo: #12203d;
+
+  /* Secndary colors */
+  --color-zen-gray: #f5f5f5;
+  --color-charcoal-gray: #333333;
+  --color-slate: #708090;
+
+  /* accent colors */
+  --color-cta-red: #f32f2fee;
+  --color-cta-hover: #fd0000c5;
+  --color-matcha-green: #7ba05b;
+  --color-hover-golden: #d4a017;
 }
 
 html,
@@ -14,70 +26,102 @@ body {
   width: 100%;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  /* color: #f32f2fee; */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none;
 }
 
 @layer components {
   main {
     @apply w-full overflow-x-hidden;
-  }
 
-  nav {
-    @apply fixed z-50 w-full;
+    .banner {
+      @apply hidden md:px-2 lg:block 2xl:px-36;
 
-    div {
-      @apply flex max-w-full flex-row items-center justify-between gap-5 bg-white px-3 py-2 md:px-5 md:py-3 2xl:mx-36;
+      > div {
+        @apply flex max-w-full flex-row items-center justify-between gap-5 px-5 py-2;
+      }
 
-      .desktop-ul {
-        @apply hidden items-center gap-4 lg:flex;
+      .left-div {
+        @apply flex items-center justify-center gap-1 leading-0;
+      }
 
-        li {
-          @apply relative font-medium tracking-wide;
-        }
+      .banner_socials {
+        @apply flex items-center justify-center gap-6;
+      }
+
+      hr {
+        @apply mx-auto h-[1px] w-[98%] border-none bg-gray-300;
       }
     }
 
-    .mobile-btn {
-      @apply mr-2 cursor-pointer text-gray-700 hover:text-gray-900 focus:text-gray-900 focus:outline-none md:hidden;
-    }
+    nav {
+      @apply fixed z-50 w-full bg-white 2xl:px-36;
 
-    .submenu-btn {
-      @apply hover:text-active-link focus:text-active-link flex cursor-pointer items-center justify-center text-gray-700 transition-colors duration-200 focus:outline-none;
-    }
+      div {
+        @apply flex max-w-full flex-row items-center justify-between gap-5 py-3 md:px-5 md:py-3;
 
-    .dropdown_menu-ul {
-      @apply absolute top-full left-0 z-50 mt-3 block w-48 flex-col rounded border border-gray-600 bg-[#232528] text-left shadow-lg;
-    }
+        .desktop-ul {
+          @apply hidden items-center gap-4 lg:flex;
 
-    .contact-btn {
-      @apply bg-btn-primary hover:bg-hover ml-4 cursor-pointer rounded-[8px] border px-7 py-3 text-[0.875rem] font-semibold tracking-wide text-white uppercase;
-    }
+          li {
+            @apply relative font-medium tracking-wide;
+          }
+        }
+      }
 
-    .desktop-ul-link {
-      @apply hover:text-active-link flex cursor-pointer items-center gap-1 px-2 py-2 transition-colors duration-200;
-    }
+      .mobile-btn {
+        @apply text-main-indigo mr-2 cursor-pointer hover:text-gray-900 focus:text-gray-900 focus:outline-none md:hidden;
+      }
 
-    .dropdown_menu-ul-link {
-      @apply hover:bg-hover block p-4 text-[0.815rem] font-light text-white transition-colors duration-200;
-    }
+      .submenu-btn {
+        @apply hover:text-main-indigo focus:text-main-indigo flex cursor-pointer items-center justify-center text-gray-500 transition-colors duration-200 focus:outline-none;
+      }
 
-    .mobile-menu {
-      @apply absolute top-0 left-0 z-20 min-h-dvh w-80 bg-white px-5 py-10;
-    }
+      .dropdown_menu-ul {
+        @apply absolute top-full left-0 z-50 mt-3 block w-56 flex-col bg-white text-left shadow-lg hover:text-white;
+      }
 
-    .bg-overlay {
-      @apply fixed inset-0 z-10 bg-black/50 backdrop-blur-sm;
-    }
+      .dropdown_menu-ul-link {
+        @apply hover:bg-main-indigo block p-4 text-[0.815rem] font-light text-black transition-all duration-200 hover:text-white;
+      }
 
-    .mobile-ul {
-      @apply absolute top-25 right-0 left-0 z-50 flex min-h-dvh w-80 flex-col text-left font-medium lg:hidden;
-    }
+      .contact-btn {
+        @apply bg-cta-red hover:bg-cta-hover ml-4 cursor-pointer rounded-[8px] border px-7 py-3 text-[0.875rem] font-semibold tracking-wide text-white uppercase;
+      }
 
-    .mobile_ul-link {
-      @apply block border-b border-b-gray-200 px-4 py-3 text-black transition-all duration-200 hover:bg-gray-100;
-    }
+      .desktop-ul-link {
+        @apply hover:text-main-indigo flex cursor-pointer items-center gap-1 px-2 py-2 transition-colors duration-200;
+      }
 
-    .mobile_ul-btn {
-      @apply flex w-full justify-between border-b border-b-gray-200 px-4 py-3 text-left text-black transition-colors duration-200 hover:bg-gray-100 focus:outline-none;
+      .mobile-menu {
+        @apply absolute top-0 left-0 z-20 min-h-dvh w-80 bg-white;
+      }
+
+      .bg-overlay {
+        @apply fixed inset-0 z-10 w-full bg-black/50 backdrop-blur-sm;
+      }
+
+      .mobile-ul {
+        @apply absolute top-25 right-0 left-0 z-50 flex min-h-dvh w-80 flex-col text-left font-medium;
+      }
+
+      .mobile_ul-link {
+        @apply block border-b border-b-gray-200 px-4 py-3 text-black transition-all duration-200 hover:bg-gray-100;
+      }
+
+      .mobile_ul-btn {
+        @apply flex w-full justify-between border-b border-b-gray-200 px-4 py-3 text-left text-black transition-colors duration-200 hover:bg-gray-100 focus:outline-none;
+      }
+
+      hr {
+        @apply bg-accent-pink absolute top-0 left-0 h-[5px] w-full border-none outline-none;
+      }
     }
   }
 }
