--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap');
 
 @import 'tailwindcss';
 
 @theme {
-  --font-poppins: 'Poppins', sans-serif;
+  /* --font-poppins: 'Poppins', sans-serif; */
+  --font-cursive: 'Edu NSW ACT Cursive', cursive;
 
   /* primary colors */
   --color-accent-pink: #ffb7c5;
@@ -13,6 +15,7 @@
   --color-zen-gray: #f5f5f5;
   --color-charcoal-gray: #333333;
   --color-slate: #708090;
+  --color-section-bg: #e8f1f2;
 
   /* accent colors */
   --color-cta-red: #f32f2fee;
@@ -34,6 +37,10 @@ body {
 html::-webkit-scrollbar,
 body::-webkit-scrollbar {
   display: none;
+}
+
+@utility wide {
+  @apply tracking-wide;
 }
 
 @layer components {
