--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&family=Outfit:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap');
 
 @import 'tailwindcss';
 
 @theme {
-  --font-poppins: 'Poppins', sans-serif;
+  --font-outfit: 'Outfit', sans-serif;
   --font-cursive: 'Edu NSW ACT Cursive', cursive;
 
   /* primary colors */
@@ -76,7 +76,7 @@ body::-webkit-scrollbar {
 
 @layer components {
   main {
-    @apply font-poppins w-full overflow-x-hidden;
+    @apply font-outfit w-full overflow-x-hidden;
 
     .banner {
       @apply hidden md:px-2 lg:block 2xl:px-36;
@@ -338,7 +338,7 @@ body::-webkit-scrollbar {
         }
 
         ul li {
-          @apply wide font-poppins text-[17px];
+          @apply wide text-[17px];
         }
       }
     }
