--- a/src/index.css
+++ b/src/index.css
@@ -294,7 +294,7 @@ body::-webkit-scrollbar {
       @apply relative flex w-full flex-col items-center justify-start overflow-hidden;
 
       img {
-        @apply h-[19.45rem] w-full rounded-sm object-cover transition-all duration-300;
+        @apply h-[19.45rem] w-full rounded-t-sm object-cover transition-all duration-300;
       }
 
       .view_btn {
@@ -318,28 +318,51 @@ body::-webkit-scrollbar {
     #home_test_preparation,
     #home_testimonial,
     #home_ourteam,
-    #home_service,
-    footer {
+    #home_service {
       @apply bg-section-bg w-full overflow-x-hidden pt-8 pb-12 2xl:px-40;
     }
 
     footer {
-      @apply bg-gradient relative;
+      @apply bg-gradient relative w-full overflow-x-hidden py-4 2xl:px-40;
 
       img {
         @apply absolute inset-0 h-full w-full object-cover opacity-20;
       }
 
-      > div {
-        @apply relative z-40 flex w-full flex-col items-center justify-between px-3 py-6 text-white sm:flex-row sm:pl-16;
+      .grid-links {
+        @apply relative z-40 grid w-full grid-cols-1 items-start justify-between gap-10 px-3 py-6 text-[#1A1B25] sm:grid-cols-2 sm:pl-16 lg:grid-cols-[1.2fr_1fr_1fr];
+      }
 
-        h2 {
-          @apply wide pb-7 text-[19px] font-bold;
-        }
+      h2 {
+        @apply pb-5 text-[19px] font-bold;
+      }
 
-        ul li {
-          @apply wide text-[17px];
+      ul {
+        @apply flex flex-col gap-1;
+      }
+
+      ul li {
+        @apply w-fit text-[17px] transition-colors duration-200 hover:text-gray-200;
+      }
+
+      .right-link {
+        @apply w-full justify-self-end lg:w-auto;
+
+        > div {
+          @apply wide flex flex-col items-start gap-1;
+
+          p {
+            @apply flex items-center justify-center gap-3;
+
+            span {
+              @apply text-[17px];
+            }
+          }
         }
+      }
+
+      .bottom-div {
+        @apply wide flex w-full flex-col items-center justify-between gap-4 border-t border-[#1A1B25] py-6 text-[15px] font-medium sm:flex-row sm:py-4 sm:text-[17px] md:mx-14 md:w-[90%] lg:w-[97%];
       }
     }
   }
