--- a/src/index.css
+++ b/src/index.css
@@ -365,5 +365,50 @@ body::-webkit-scrollbar {
         @apply wide flex w-full flex-col items-center justify-between gap-4 border-t border-[#1A1B25] py-6 text-[15px] font-medium sm:flex-row sm:py-4 sm:text-[17px] md:mx-14 md:w-[90%] lg:w-[97%];
       }
     }
+
+    /* Contact Page */
+    #contact {
+      @apply w-full px-4 py-8 sm:px-10 md:px-20 lg:px-32 xl:px-40;
+
+      .content {
+        @apply mx-auto w-full max-w-6xl py-10;
+
+        .content_header {
+          @apply mb-12 flex flex-col items-start justify-between gap-4 sm:flex-row sm:items-center sm:gap-0;
+
+          h1 {
+            @apply text-3xl font-semibold md:text-4xl lg:text-5xl;
+          }
+
+          p {
+            @apply text-[17px] font-medium;
+          }
+        }
+
+        .form_container form {
+          @apply grid grid-cols-1 gap-4;
+
+          div {
+            @apply flex flex-col md:flex-row md:gap-16;
+
+            input {
+              @apply text-main-indigo bg-zen-gray w-full flex-1 border border-black px-6 py-4 outline-none focus:bg-transparent md:py-6;
+            }
+
+            :last-child {
+              @apply mt-4 md:mt-0;
+            }
+          }
+
+          textarea {
+            @apply bg-zen-gray w-full border border-black px-6 py-4 outline-none md:py-6;
+          }
+
+          button {
+            @apply bg-cta-red wide hover:bg-cta-hover mx-auto w-fit cursor-pointer rounded-sm px-9 py-5 text-white transition-colors;
+          }
+        }
+      }
+    }
   }
 }
