--- a/src/index.css
+++ b/src/index.css
@@ -294,7 +294,7 @@ body::-webkit-scrollbar {
       @apply relative flex w-full flex-col items-center justify-start overflow-hidden;
 
       img {
-        @apply h-[19.45rem] w-full rounded-t-sm object-cover transition-all duration-200;
+        @apply h-[19.45rem] w-full rounded-t-sm object-cover transition-all duration-300;
       }
 
       .view_btn {
@@ -374,7 +374,7 @@ body::-webkit-scrollbar {
         @apply mx-auto w-full max-w-6xl py-10;
 
         .content_header {
-          @apply mb-4 flex items-start justify-between gap-4 sm:mb-8 sm:items-center sm:gap-0;
+          @apply mb-12 flex flex-col items-start justify-between gap-4 sm:flex-row sm:items-center sm:gap-0;
 
           h1 {
             @apply text-3xl font-semibold md:text-4xl lg:text-5xl;
@@ -406,27 +406,6 @@ body::-webkit-scrollbar {
 
           button {
             @apply bg-cta-red wide hover:bg-cta-hover mx-auto w-fit cursor-pointer rounded-sm px-9 py-5 text-white transition-colors;
-          }
-        }
-      }
-    }
-
-    /* Gallery Page */
-    #gallery_section {
-      @apply relative w-full px-4 py-8 sm:px-10 md:px-20 lg:px-32 xl:px-40;
-
-      .content {
-        @apply mx-auto w-full max-w-6xl py-10;
-
-        .content_header {
-          @apply mb-4 flex items-start justify-between gap-4 sm:mb-8 sm:items-center sm:gap-0;
-
-          h1 {
-            @apply text-3xl font-semibold md:text-4xl lg:text-5xl;
-          }
-
-          p {
-            @apply text-[17px] font-medium;
           }
         }
       }
