--- a/src/index.css
+++ b/src/index.css
@@ -405,7 +405,28 @@ body::-webkit-scrollbar {
           }
 
           button {
-            @apply bg-cta-red wide hover:bg-cta-hover mx-auto w-fit cursor-pointer rounded-sm px-9 py-5 text-white transition-colors;
+            @apply bg-cta-red wide hover:bg-cta-hover mx-auto w-fit cursor-pointer rounded-sm px-9 py-5 text-white transition-colors outline-none;
+          }
+        }
+      }
+    }
+
+    /* Gallery Page */
+    #gallery_section {
+      @apply relative w-full px-4 py-8 sm:px-10 md:px-20 lg:px-32 xl:px-40;
+
+      .content {
+        @apply mx-auto w-full max-w-6xl py-10;
+
+        .content_header {
+          @apply mb-4 flex items-start justify-between gap-4 sm:mb-8 sm:items-center sm:gap-0;
+
+          h1 {
+            @apply text-3xl font-semibold md:text-4xl lg:text-5xl;
+          }
+
+          p {
+            @apply text-[17px] font-medium;
           }
         }
       }
