--- a/src/index.css
+++ b/src/index.css
@@ -191,14 +191,14 @@ body::-webkit-scrollbar {
       }
 
       .hero_banner {
-        @apply bg-gradient relative mx-3 mt-6 h-60 w-auto overflow-hidden rounded-lg sm:mx-auto sm:mt-10 sm:h-70 sm:w-[85%];
+        @apply bg-gradient relative mx-3 mt-6 h-60 w-auto overflow-hidden rounded-lg sm:mx-auto sm:mt-10 sm:h-70 md:max-w-4xl 2xl:max-w-7xl;
 
         img {
           @apply absolute inset-0 h-full w-full object-cover opacity-40;
         }
 
         .content {
-          @apply relative z-10 flex h-full flex-col items-center justify-center text-center sm:mx-10 sm:px-6 sm:text-left md:gap-10 lg:flex-row lg:justify-between lg:gap-0;
+          @apply relative z-10 flex h-full w-full flex-col items-center justify-center text-center sm:px-6 sm:text-left md:gap-10 lg:flex-row lg:justify-between lg:gap-0;
 
           h2 {
             @apply text-main-indigo text-2xl font-bold sm:text-4xl;
@@ -290,6 +290,7 @@ body::-webkit-scrollbar {
       }
     }
 
+    /* Used in GridCard Component */
     .cardData_card {
       @apply relative flex w-full flex-col items-center justify-start overflow-hidden;
 
@@ -366,25 +367,28 @@ body::-webkit-scrollbar {
       }
     }
 
+    /* Used in PageHeading component */
+    .content {
+      @apply w-full px-4 lg:py-10 2xl:mx-auto 2xl:max-w-7xl;
+
+      .content_header {
+        @apply mb-8 flex flex-row items-center justify-between gap-4 sm:items-center sm:gap-0 md:mb-16;
+
+        h1 {
+          @apply text-3xl font-semibold md:text-4xl lg:text-5xl;
+        }
+
+        p {
+          @apply text-[17px] font-medium;
+        }
+      }
+    }
+
     /* Contact Page */
     #contact {
       @apply w-full px-4 py-8 sm:px-10 md:px-20 lg:px-32 xl:px-40;
 
       .content {
-        @apply mx-auto w-full max-w-6xl py-10;
-
-        .content_header {
-          @apply mb-12 flex flex-col items-start justify-between gap-4 sm:flex-row sm:items-center sm:gap-0;
-
-          h1 {
-            @apply text-3xl font-semibold md:text-4xl lg:text-5xl;
-          }
-
-          p {
-            @apply text-[17px] font-medium;
-          }
-        }
-
         .form_container form {
           @apply grid grid-cols-1 gap-4;
 
@@ -411,25 +415,13 @@ body::-webkit-scrollbar {
       }
     }
 
-    /* Gallery Page */
-    #gallery_section {
+    /* Gallery Page and about/introduction page */
+    #gallery_section,
+    #about_introduction {
       @apply relative w-full px-4 py-8 sm:px-10 md:px-20 lg:px-32 xl:px-40;
+    }
 
-      .content {
-        @apply mx-auto w-full max-w-6xl py-10;
-
-        .content_header {
-          @apply mb-4 flex items-start justify-between gap-4 sm:mb-8 sm:items-center sm:gap-0;
-
-          h1 {
-            @apply text-3xl font-semibold md:text-4xl lg:text-5xl;
-          }
-
-          p {
-            @apply text-[17px] font-medium;
-          }
-        }
-      }
+    #about_introduction {
     }
 
     /* Custom dot bounce animation for Loading */
