--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&family=Outfit:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap'); */
 
 @import 'tailwindcss';
 
 @theme {
   --font-outfit: 'Outfit', sans-serif;
-  --font-cursive: 'Edu NSW ACT Cursive', cursive;
+  /*   */
 
   /* primary colors */
   --color-accent-pink: #ffb7c5;
