--- a/src/index.css
+++ b/src/index.css
@@ -367,28 +367,13 @@ body::-webkit-scrollbar {
       }
     }
 
-    /* Used in PageHeading component */
-    .content {
-      @apply w-full lg:pb -10 2xl:mx-auto 2xl:max-w-7xl;
-
-      .content_header {
-        @apply mb-8 text-[47px] font-bold uppercase;
-
-        h1 {
-          @apply text-3xl font-semibold uppercase lg:text-4xl;
-        }
-
-        p {
-          @apply text-[17px] font-medium;
-        }
-      }
-    }
-
     /* Contact Page */
     #contact {
       @apply w-full px-4 py-8 sm:px-10 md:px-20 lg:px-32 xl:px-40;
 
-      .content {
+      .contact_content {
+        @apply w-full lg:pb-10 2xl:mx-auto 2xl:max-w-6xl;
+
         .form_container form {
           @apply grid grid-cols-1 gap-4;
 
