--- a/src/index.css
+++ b/src/index.css
@@ -403,7 +403,7 @@ body::-webkit-scrollbar {
     #service_section,
     #why_choose_us,
     #faq {
-      @apply relative p-3.5 md:mt-6 md:p-8 2xl:px-40;
+      @apply relative p-3.5 md:mt-6 md:p-8 lg:mx-40;
     }
 
     /* FAQs Page */
@@ -443,6 +443,31 @@ body::-webkit-scrollbar {
 
           a {
             @apply bg-cta-red hover:bg-cta-hover inline-block rounded-sm px-8 py-3 font-medium text-white shadow-md transition-all;
+          }
+        }
+      }
+    }
+
+    /* Courses_Details Page */
+    #courses_details {
+      @apply wide mx-auto mt-4 mb-12 w-full max-w-5xl rounded-lg bg-gradient-to-br from-gray-50 to-red-50 px-5 py-2 shadow-md md:my-16 md:border md:border-gray-200 md:px-12 md:py-8;
+
+      h1 {
+        @apply text-main-indigo mb-6 text-3xl font-bold;
+      }
+
+      ul {
+        @apply mb-6 list-disc px-8 md:px-12;
+      }
+
+      .outcome_div {
+        @apply overflow-hidden rounded-lg border border-gray-300 bg-white shadow-sm transition-colors duration-200 hover:bg-gray-100;
+
+        button {
+          @apply flex w-full items-center justify-between p-5 text-left focus:outline-none;
+
+          p {
+            @apply text-lg font-medium text-gray-900;
           }
         }
       }
